package go.ui;

public class GameView {
}
